tests/security/taintThroughPregMatch/output.txt
ERROR: TaintedData - input.hack:12:18 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> $_GET['bad'] (input.hack:2:13) ----> $text (input.hack:2:5) ----> call to preg_match_all_with_matches (input.hack:7:13) ----> preg_match_all_with_matches#2 (input.hack:7:13) ----> out preg_match_all_with_matches#3 (hhi_embedded_stdlib/builtins_preg.hhi:84:37) --array-fetch--> $matches[1] (input.hack:11:18) --array-fetch--> arrayvalue-fetch (input.hack:11:18) ----> $match (input.hack:11:33) ----> call to echo (input.hack:12:18) ----> echo#1 (input.hack:12:13)